[package]
name = "imaging_vello"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Vello (GPU) backend for the imaging command stream."
readme = "README.md"
keywords = ["graphics", "imaging", "rendering", "vello"]
categories = ["graphics", "rendering"]

[dependencies]
imaging = { features = ["std"], workspace = true }
imaging_wgpu = { default-features = false, workspace = true }
kurbo = { default-features = true, workspace = true }
peniko = { default-features = true, workspace = true }
vello_07 = { default-features = false, features = ["wgpu"], optional = true, package = "vello", version = "0.7.0" }
vello_08 = { default-features = false, features = ["wgpu"], optional = true, package = "vello", version = "0.8.0" }
vello_09 = { default-features = false, features = ["wgpu"], optional = true, package = "vello", version = "0.9.0" }

[features]
default = ["vello-0-9"]
vello-0-7 = ["dep:vello_07", "imaging_wgpu/wgpu-27"]
vello-0-8 = ["dep:vello_08", "imaging_wgpu/wgpu-28"]
vello-0-9 = ["dep:vello_09", "imaging_wgpu/wgpu-29"]

[dev-dependencies]
pollster = "0.4.0"
wgpu_27 = { package = "wgpu", version = "27" }
wgpu_28 = { package = "wgpu", version = "28" }
wgpu_29 = { package = "wgpu", version = "29" }

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["vello-0-9"]
default-target = "x86_64-unknown-linux-gnu"
targets = []
