[package]
name = "imaging_vello_hybrid"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Vello hybrid (CPU/GPU via wgpu) backend for the imaging command stream."
readme = "README.md"
keywords = ["gpu", "graphics", "imaging", "rendering", "vello"]
categories = ["graphics", "rendering"]

[dependencies]
glifo = { default-features = false, version = "0.1" }
imaging = { features = ["std"], workspace = true }
imaging_wgpu = { default-features = false, features = ["wgpu-29"], workspace = true }
kurbo = { default-features = true, workspace = true }
peniko = { default-features = true, workspace = true }
vello_common = { default-features = true, version = "0.0.9" }
vello_hybrid = { default-features = true, version = "0.0.9" }
wgpu = { default-features = false, features = [
    "std",
    "wgsl",
], version = "29.0.3" }

[lints]
workspace = true

[dev-dependencies]
pollster = "0.4.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []
